# ros2_master_ws

install/: local_setup.sh  setup.sh
install/cobot_camera_moveit_config/share/cobot_camera_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cobot_description/share/cobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/cobot_description/: CMakeLists.txt
src/cobot_description/config/: config.rviz
src/cobot_description/launch/: rviz.launch.py
src/cobot_description/urdf/: camera.xacro  cobot_camera.urdf.xacro  cobot_gripper_controller.urdf.xacro  cobot_traj_controller.urdf.xacro
src/cobot_gazebo/: CMakeLists.txt  package.xml
src/cobot_gazebo/config/: controllers.yaml
src/cobot_gazebo/launch/: spawn_robot_camera.launch.py  spawn_robot_gripper_controllers.launch.py  spawn_robot_traj_controllers.launch.py
src/cobot_gazebo/src/: joint_publisher.cpp
src/custom_robot_ik/: CMakeLists.txt  package.xml
src/custom_robot_ik/src/: pick_place.cpp  test_ik.cpp
src/custom_robot_moveit_config/: CMakeLists.txt
src/custom_robot_moveit_config/config/: custom_robot.ros2_control.xacro  moveit_controllers.yaml
src/custom_robot_moveit_config/launch/: spawn_controllers.launch.py  warehouse_db.launch.py
src/ind_environment/: CMakeLists.txt
src/ind_environment/worlds/: pick_and_place_workplace_red_cube.world
(+161 files in other folders)
